--- a/notebooks/meta-gradient-boosting.ipynb
+++ b/notebooks/meta-gradient-boosting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Contents\n",
     "\n",
-    "- [Introduction](#introduction)\n",
+    "- [Introduction](meta_gradient_boosting.ipynb#introduction)\n",
     "- [1. Data Loading](#1-data-loading)\n",
     "- [2. Feature Engineering](#2-feature-engineering)\n",
     "- [3. Label definition: \"good trades\"](#3-label-definition-good-trades)\n",
