--- a/notebooks/meta-gradient-boosting.ipynb
+++ b/notebooks/meta-gradient-boosting.ipynb
@@ -3,6 +3,27 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "## Contents (navigation only works when rendered, see README)\n",
+    "\n",
+    "- [Introduction](#introduction)\n",
+    "- [1. Data Loading](#1-data-loading)\n",
+    "- [2. Feature Engineering](#2-feature-engineering)\n",
+    "- [3. Label definition: \"good trades\"](#3-label-definition-good-trades)\n",
+    "- [4. Modeling dataset](#4-modeling-dataset)\n",
+    "- [5. Gradient Boosting with time-series CV](#5-gradient-boosting-with-time-series-cv)\n",
+    "- [5a. Overall out-of-sample ROC curve](#5a-overall-out-of-sample-roc-curve)\n",
+    "- [6. Feature importance](#6-feature-importance)\n",
+    "- [6a. Simple probability-based entry rule](#6a-simple-probability-based-entry-rule)\n",
+    "- [6b. In-sample ROC for the final model (optimistic)](#6b-in-sample-roc-for-the-final-model-optimistic)\n",
+    "- [7. Simple equity curve vs. buy & hold](#7-simple-equity-curve-vs-buy--hold)\n",
+    "- [8. Takeaways](#8-takeaways)"
+   ],
+   "id": "db3c13edd2ece7bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "# META Gradient Boosting Model",
    "id": "c3375d0a0837c1f6"
   },
